<resources>
    <string name="app_name">My App Protfolio</string>
    <string name="action_settings">Settings</string>
    <string name="heading">My Nanodegree Apps!</string>
    <string name="Button1">Spotify Streamer</string>
    <string name="Button2">Scores App</string>
    <string name="Button3">Library App</string>
    <string name="Button4">Build It Bigger</string>
    <string name="Button5">XYZ Reader</string>
    <string name="Button6">Capstone:My own App</string>
</resources>
